Mostrar Eventos+botão fazendo a tabela dos eventos e criando botao para cadastrar eventos

--- a/eventoapp/src/main/resources/templates/index.html
+++ b/eventoapp/src/main/resources/templates/index.html
@@ -1,15 +1,32 @@
 <html>
-
+<head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>  
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 <body>
     <h1>Lista de Eventos</h1>
-    <h3><a href="/cadastroDoEvento">Cadastrar novo Evento</a></h3>
-    <div th:each="evento : ${eventos}">
-        <div class="row">
-            <p><span th:text="${evento.nome}"></span></p>
-            <p><span th:text="${evento.local}"></span></p>
-            <p><span th:text="${evento.data}"></span></p>
-            <p><span th:text="${evento.horarioDeInicio}"></span></p>
-        </div>
-    </div>
+    <h3><a href="/cadastroDoEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_box</i>Cadastrar novo Evento</a></h3>
+    <table>
+        <thead>
+            <th>Nome</th>
+            <th>Local</th>
+            <th>Data</th>
+            <th>Hora De Inicio</th>
+        </thead>.
+        <body>
+            <tr th:each="evento : ${eventos}">
+                    <td><span th:text="${evento.nome}"></span></td>
+                    <td><span th:text="${evento.local}"></span></td>
+                    <td><span th:text="${evento.data}"></span></td>
+                    <td><span th:text="${evento.horarioDeInicio}"></span></td>
+            </tr>
+        </body>
+    </table>
+     <!--JavaScript at end of body for optimized loading-->
+     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 </html>
