container criando container para as listas e formularios

--- a/eventoapp/src/main/resources/templates/index.html
+++ b/eventoapp/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Lista de Eventos</h1>
     <h3><a href="/cadastroDoEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_box</i>Cadastrar novo Evento</a></h3>
-    <table>
+    <table class="container">
         <thead>
             <th>Nome</th>
             <th>Local</th>
