Criação da Visualização do Evneto Foi criado um metodo para ver os detalhes de cada evento para depois poder ver a lista de participantes em cada evento

--- a/eventoapp/src/main/resources/templates/index.html
+++ b/eventoapp/src/main/resources/templates/index.html
@@ -17,9 +17,9 @@
             <th>Data</th>
             <th>Hora De Inicio</th>
         </thead>.
-        <body>
+        <body> 
             <tr th:each="evento : ${eventos}">
-                    <td><span th:text="${evento.nome}"></span></td>
+                    <td><a th:href="${(#mvc.url('CDE#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.nome}"></span></a></td>
                     <td><span th:text="${evento.local}"></span></td>
                     <td><span th:text="${evento.data}"></span></td>
                     <td><span th:text="${evento.horarioDeInicio}"></span></td>
