--- a/eventoapp/src/main/resources/templates/Evento/formularioDoEvento.html
+++ b/eventoapp/src/main/resources/templates/Evento/formularioDoEvento.html
@@ -9,25 +9,38 @@
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>  
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="style/styleCSS.css"/>
 </head>
 <body>
-    <h1>Esta Pagina É Dedicada ao Cadatro de Eventos</h1>
-    <h3><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Eventos</a></h3>
-    <form class="container" method="post"><!--Criação das entradas de texto que irão entrar no Formulario -->
-        Nome: <input type="text" value="" name="nome"/>
-        <div class="row">
-            <div class="input-field col s6">
-                Local: <input type="text" value="" name="local"/>   
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Cadastrar Eventos</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Eventos</a></li>
+            </ul>
             </div>
-            <div class="input-field col s3">
-                Data do Evento: <input type="date" value="" name="data"/>
-            </div>
-            <div class="input-field col s3">
-                Horario do Evento: <input type="text" value="" name="horarioDeInicio"/>
-            </div>
-        </div>
-        <button class="waves-effect waves-light btn" type="submit">Enviar</button><!--Botão para jogar as informaçoes preenchidas no formulario dentro do banco de dados-->
-    </form>
+        </nav>
+    </header>
+    <th:block th:include="mensagemValidacao"></th:block>
+	<div class="container formEvento">
+	
+	<form class="container" method="post"><!--Criação das entradas de texto que irão entrar no Formulario -->
+		Nome: <input type="text" value="" name="nome"/>
+		<div class="row">
+			<div class="input-field col s6">
+				Local: <input type="text" value="" name="local"/>
+			</div>
+			<div class="input-field col s3">
+				Data do Evento: <input type="date" value="" name="data"/>
+			</div>
+			<div class="input-field col s3">
+				Horario do Evento: <input type="time" value="" name="horarioDeInicio"/>
+			</div>
+		</div>
+		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
+	</form>
+	</div>
     <script type="text/javascript" src="https://code.jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
