--- a/eventoapp/src/main/resources/templates/index.html
+++ b/eventoapp/src/main/resources/templates/index.html
@@ -7,9 +7,17 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
+<head>
+    <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">Lista de Eventos</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/cadastroDoEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_box</i>Cadastrar Eventos</a></li>
+          </ul>
+        </div>
+      </nav>
+</head>
 <body>
-    <h1>Lista de Eventos</h1>
-    <h3><a href="/cadastroDoEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_box</i>Cadastrar novo Evento</a></h3>
     <table class="container">
         <thead>
             <th>Nome</th>
